--- a/portfolio.html
+++ b/portfolio.html
@@ -26,13 +26,13 @@
 		  </nav>
 		  <div class="social-icons">
 			<a href="https://github.com/your-github-profile" class="github">
-			  <i class="fa fa-github"></i>
+			  <i class="fab fa-github"></i>
 			</a>
 			<a href="https://linkedin.com/in/your-linkedin-profile" class="linkedin">
-			  <i class="fa fa-linkedin"></i>
+			  <i class="fab fa-linkedin"></i>
 			</a>
 			<a href="https://twitter.com/your-twitter-profile" class="twitter">
-			  <i class="fa fa-twitter"></i>
+			  <i class="fab fa-twitter"></i>
 			</a>
 		  </div>
 		  <a class="main-button" href="#contact">Contact Me</a>
@@ -62,67 +62,123 @@
   
 	  <section class="skills" id="skills">
 		<div class="skills-text">
-			<h2>Skills</h2>
-			<p>Back in 2021, after a successful career in hospitality management, amidst the turmoil 
-				caused by the COVID-19 pandemic, I found myself in a new country at a crossroads. 
-				Determined to embrace the opportunities presented by the technology industry, I 
-				immersed myself in the world of software development, pursuing a Software Development
-				Diploma. Today, I continue to pursue my passion by working towards a bachelor's 
-				degree in IT and sharing my journey and accomplishments through NabuTech.
-			</p>
+		  <h2>Skills</h2>
+		  <p>Back in 2021, after a successful career in hospitality management, amidst the turmoil caused by the COVID-19 pandemic, I found myself in a new country at a crossroads. Determined to embrace the opportunities presented by the technology industry, I immersed myself in the world of software development, pursuing a Software Development Diploma. Today, I continue to pursue my passion by working towards a bachelor's degree in IT and sharing my journey and accomplishments through NabuTech.</p>
 		</div>
 		<div class="skill-bars">
-			<div class="skill-bar">
-			  <div class="skill-bar-label">Strong-Style</div>
-			  <div class="progress">
-				<div class="progress-value" style="width: 80%; background-color: rgb(0, 255, 0);"></div>
-				</div>
-				<ul class="skill-list">
-				  <li>HTML</li>
-				  <li>CSS</li>
-				  <li>Bootstrap</li>
-				  <li>JavaScript</li>
-				  <li>React</li>
-				  <li>NodeJs</li>
-				  <li>Express</li>
-				  <li>Git</li>
-				  <li>Postman</li>
-				</ul>
-			  </div>
+		  <div class="skill-bar">
+			<div class="progress">
+			  <div class="progress-value strong-style" style="width: 90%"></div>
+			  <div class="progress-label">Strong-Style</div>
 			</div>
-			<div class="skill-bar">
-			  <div class="skill-bar-label">Savvy</div>
-			  <div class="progress">
-				<div class="progress-value" style="width: 70%; background-color: #FFA500;"></div>
+			<div class="skill-icons">
+				<div class="icon-item">
+					<i class="fab fa-html5"></i>
+					<span class="icon-text">html-5</span>
 				</div>
-				<ul class="skill-list">
-				  <li>Django</li>
-				  <li>Linux</li>
-				  <li>Windows</li>
-				  <li>MongoDB</li>
-				  <li>Python</li>
-				  <li>Zapier</li>
-				</ul>
-			  </div>
+				<div class="icon-item">
+			  		<i class="fab fa-css3"></i>
+					<span class="icon-text">css3</span>
+				</div>
+				<div class="icon-item">
+					<i class="fab fa-bootstrap"></i>
+					<span class="icon-text">bootstrap</span>
+				</div>
+				<div class="icon-item">
+					<i class="fab fa-js"></i>
+					<span class="icon-text">javascript</span>
+				</div>
+				<div class="icon-item">			
+					<i class="fab fa-react"></i>
+					<span class="icon-text">react</span>
+				</div>
+				<div class="icon-item">
+					<i class="fab fa-node-js"></i>
+					<span class="icon-text">node.js</span>
+				</div>
+				<div class="icon-item">
+					<i class="fa fa-server"></i>
+					<span class="icon-text">express</span>	
+				</div>
+				<div class="icon-item">
+					<i class="fab fa-git"></i>
+					<span class="icon-text">git</span>
+				</div>
+				<div class="icon-item">
+					<i class="fas fa-envelope"></i>
+					<span class="icon-text">postman</span>
+				</div>
+		  </div>
+		  <div class="skill-bar">
+			<div class="progress">
+			  <div class="progress-value savvy" style="width: 60%"></div>
+			  <div class="progress-label">Savvy</div>
 			</div>
-			<div class="skill-bar">
-			  <div class="skill-bar-label">Apprentice</div>
-			  <div class="progress">
-				<div class="progress-value" style="width: 60%; background-color: red;"></div>
+			<div class="skill-icons">
+				<div class="icon-item">
+					<i class="fas fa-hat-cowboy"></i>
+					<span class="icon-text">django</span>
 				</div>
-				<ul class="skill-list">
-				  <li>C#</li>
-				  <li>Figma</li>
-				  <li>Firebase</li>
-				  <li>Jest</li>
-				  <li>MySQL</li>
-				  <li>ReactNative</li>
-				  <li>Xamarin</li>
-				</ul>
-			  </div>
+				<div class="icon-item">
+					<i class="fab fa-linux"></i>
+					<span class="icon-text">linux</span>
+				</div>
+				<div class="icon-item">
+					<i class="fab fa-windows"></i>
+					<span class="icon-text">windows</span>
+				</div>
+				<div class="icon-item">
+					<i class="fa fa-database"></i>
+					<span class="icon-text">mongodb</span>
+				</div>
+				<div class="icon-item">
+					<i class="fab fa-python"></i>
+					<span class="icon-text">python</span>					
+				</div>
+				<div class="icon-item">
+					<i class="fa fa-bolt"></i>
+					<span class="icon-text">zapier</span>					
+				</div>
+			</div>
+		  <div class="skill-bar">
+			<div class="progress">
+			  <div class="progress-value apprentice" style="width: 30%"></div>
+			  <div class="progress-label">Apprentice</div>
+			</div>
+			<div class="skill-icons">
+				<div class="icon-item">
+					<i class="fa fa-code"></i>
+					<span class="icon-text">c#</span>
+				</div>
+				<div class="icon-item">
+					<i class="fab fa-figma"></i>
+					<span class="icon-text">figma</span>
+				</div>
+				<div class="icon-item">
+					<i class="fa fa-fire"></i>
+					<span class="icon-text">firebase</span>
+				</div>
+				<div class="icon-item">
+					<i class="fas fa-vial"></i>
+					<span class="icon-text">jest</span>
+				</div>
+				<div class="icon-item">
+					<i class="fa fa-database"></i>
+					<span class="icon-text">mysql</span>
+				</div>
+				<div class="icon-item">
+					<i class="fa fa-mobile"></i>
+					<span class="icon-text">reactnative</span>
+				</div>
+				<div class="icon-item">
+					<i class="fas fa-times"></i>
+					<span class="icon-text">xamarin</span>
 			</div>
 		  </div>
+		</div>
 	  </section>
+	  
+	  
 
 <script src="script.js"></script>
 </body>
