--- a/portfolio.html
+++ b/portfolio.html
@@ -176,9 +176,60 @@
 			</div>
 		  </div>
 		</div>
-	  </section>
+	</section>
 	  
-	  
+	<section class="my-projects">
+		<h2>My Projects</h2>
+		<div class="projects-container">
+			<div class="project-card">
+				<div class="project-image">
+					<img src="Capture.JPG"></src>
+				</div>
+				<div class="project-detail">
+					<h3 class="project-title">Final Project</h3>
+					<p class="project-description">Dashboard App for a Solar Panel installation 
+						company. Built using MERN stack. Back-end using Node.js, Express, MongoDB.
+						Front-end built using React.
+					</p>
+					<div class="project-navigation">
+						<span class="project-tag"> Visit Project Documentation</span>
+						<span class="project-tag"> Visit Project Code</span>
+						<span class="project-tag"> Visit Project Presentation</span>
+					</div>
+
+				</div>
+			</div>
+			<div class="project-card">
+				<div class="project-image">
+					<img src="oldVnew.JPG"></src>
+				</div>
+				<div class="project-detail">
+					<h3 class="project-title">Then Vs Now</h3>
+					<p class="project-description">My first ever project, using HTML/CSS. And an updated version 
+						using my current skillset.
+					</p>
+					<div class="project-navigation">
+						<span class="project-tag"> Visit Project</span>
+					</div>
+				</div>
+			</div>
+			<div class="project-card">
+				<div class="project-image">
+					<img src="a&h.JPG"></src>
+				</div>
+				<div class="project-detail">
+					<h3 class="project-title">A&H Website</h3>
+					<p class="project-description">75% Complete for friends cleaning company. 
+						Fully responsive web page built with HTML, CSS, Bootstrap, JavaScript. 
+						(On hold whilst company assesses their business needs)
+					</p>
+					<div class="project-navigation">
+						<span class="project-tag"> View Project</span>
+					</div>
+				</div>
+			</div>
+		</div>  
+	</section>
 
 <script src="script.js"></script>
 </body>
