--- a/portfolio.html
+++ b/portfolio.html
@@ -178,7 +178,7 @@
 		</div>
 	</section>
 	  
-	<section class="my-projects">
+	<section class="my-projects" id="projects">
 		<h2>My Projects</h2>
 		<div class="projects-container">
 			<div class="project-card">
@@ -230,6 +230,36 @@
 			</div>
 		</div>  
 	</section>
+
+	<section class="contact" id="contact">
+		<div class=" contact-details">
+			<h2>Contact Me</h2>
+			<a class="contact-email" href="mailto:nabutech@proton.me">nabutech@proton.me</a>
+			<div class="social-icons contact">
+				<a href="https://github.com/your-github-profile" class="github">
+				  <i class="fab fa-github"></i>
+				</a>
+				<a href="https://linkedin.com/in/your-linkedin-profile" class="linkedin">
+				  <i class="fab fa-linkedin"></i>
+				</a>
+				<a href="https://twitter.com/your-twitter-profile" class="twitter">
+				  <i class="fab fa-twitter"></i>
+				</a>
+			</div>
+		</div>
+		<div class="contact-image">
+			<div class="glitch-wrapper">
+				<img alt="phone" src="eckhard-hoehmann-NKKvASHfrG4-unsplash.jpg"
+				class="glitch-image">
+			</div>
+			<label class="contact-image-label typewriter">Answer the Phone....</label>
+		</div>
+		<a class="system-reset-button" href="#top">
+			<i class="fas fa-sync-alt"></i>System Reset...
+		</a>
+	</section>
+
+
 
 <script src="script.js"></script>
 </body>
