--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 			<a href="#projects">Projects</a>
 		  </nav>
 		  <div class="social-icons">
-			<a href="https://github.com/your-github-profile" class="github">
+			<a href="https://github.com/NabuTech" class="github">
 			  <i class="fab fa-github"></i>
 			</a>
-			<a href="https://linkedin.com/in/your-linkedin-profile" class="linkedin">
+			<a href="https://www.linkedin.com/in/sammyjohnrawlinson" class="linkedin">
 			  <i class="fab fa-linkedin"></i>
 			</a>
-			<a href="https://twitter.com/your-twitter-profile" class="twitter">
+			<a href="https://twitter.com/nabu_tech" class="twitter">
 			  <i class="fab fa-twitter"></i>
 			</a>
 		  </div>
@@ -63,7 +63,19 @@
 	  <section class="skills" id="skills">
 		<div class="skills-text">
 		  <h2>Skills</h2>
-		  <p>Back in 2021, after a successful career in hospitality management, amidst the turmoil caused by the COVID-19 pandemic, I found myself in a new country at a crossroads. Determined to embrace the opportunities presented by the technology industry, I immersed myself in the world of software development, pursuing a Software Development Diploma. Today, I continue to pursue my passion by working towards a bachelor's degree in IT and sharing my journey and accomplishments through NabuTech.</p>
+		  <p> With a strong problem-solving acumen, project management skills, and 
+			self-motivation, I am adept at creating innovative and efficient solutions.
+			 My passion for learning and continuous improvement drives me to evolve 
+			 constantly. I have explored various programming languages, most notably C# 
+			 and Python. In full-stack development, I excel with HTML, CSS, and 
+			 JavaScript, and I am proficient in working with frameworks like React and 
+			 Node.js. While I have experience with SQL, my expertise lies in MongoDB for
+			  databases. I am fully competent with Git and well-versed in Agile 
+			  practices, including Kanban and Scrum methodologies. Additionally, I 
+			  possess a comprehensive understanding of other software development skills 
+			  and processes such as Testing (UAT and Unit), UI/UX Design, and best 
+			  security practices.
+		  </p>
 		</div>
 		<div class="skill-bars">
 		  <div class="skill-bar">
@@ -183,7 +195,7 @@
 		<div class="projects-container">
 			<div class="project-card">
 				<div class="project-image">
-					<img src="Capture.JPG"></src>
+					<img src="Capture.JPG"></img>
 				</div>
 				<div class="project-detail">
 					<h3 class="project-title">Final Project</h3>
@@ -192,16 +204,15 @@
 						Front-end built using React.
 					</p>
 					<div class="project-navigation">
-						<span class="project-tag"> Visit Project Documentation</span>
-						<span class="project-tag"> Visit Project Code</span>
-						<span class="project-tag"> Visit Project Presentation</span>
+						<a href="https://github.com/HadleysHope/IT6041-Team-DDT.git" class="project-tag">Visit Project Documentation</a>
+						<a href="https://github.com/HadleysHope/SolarLifePlatform.git" class="project-tag">Visit Project Code</a>
+						<a href="https://hadleyshope.github.io/SolarLifeProject_Presentation/" class="project-tag">Visit Project Presentation</a>
 					</div>
-
 				</div>
 			</div>
 			<div class="project-card">
 				<div class="project-image">
-					<img src="oldVnew.JPG"></src>
+					<img src="oldVnew.JPG"></img>
 				</div>
 				<div class="project-detail">
 					<h3 class="project-title">Then Vs Now</h3>
@@ -209,13 +220,13 @@
 						using my current skillset.
 					</p>
 					<div class="project-navigation">
-						<span class="project-tag"> Visit Project</span>
+						<a href="link-to-project" class="project-tag">Visit Project</a>
 					</div>
 				</div>
 			</div>
 			<div class="project-card">
 				<div class="project-image">
-					<img src="a&h.JPG"></src>
+					<img src="a&h.JPG"></img>
 				</div>
 				<div class="project-detail">
 					<h3 class="project-title">A&H Website</h3>
@@ -224,12 +235,13 @@
 						(On hold whilst company assesses their business needs)
 					</p>
 					<div class="project-navigation">
-						<span class="project-tag"> View Project</span>
+						<a href="./A-HCleaning/home.html" class="project-tag">View Project</a>
 					</div>
 				</div>
 			</div>
 		</div>  
 	</section>
+	
 
 	<section class="contact" id="contact">
 		<div class=" contact-details">
