Refactored and Organised directories

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio</title>
   <meta name="description" content="Free Web tutorials">
   <meta name="keywords" content="HTML, CSS, JavaScript">
@@ -10,7 +10,7 @@
   
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.13.0/css/all.min.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
 
 </head>
 <body>
@@ -38,13 +38,13 @@
 		  <a class="main-button" href="#contact">Contact Me</a>
 		</div>
 		<div class="greeting-image">
-		  <img alt="circuit board" src="neon-line-circuit-board-neon-digital-background-pink-neon-lines-modern-technology-printed-circuit-board.jpg">
-		</div>
+			<img src="./images/neon-line-circuit-board-neon-digital-background-pink-neon-lines-modern-technology-printed-circuit-board.jpg" alt="Digital Circuit Board Background"/>
+		  </div>
 	  </section>
 
 	  <section class="about" id="about">
 		<div class="about-image">
-			<img alt="Profile Image" src="calabim.png">
+			<img src="./images/calabim.png" alt="Digital Mysterious Mad Hatter Profile Picture"/>
 		  </div>
 		<div class="about-text">
 			<h2>About</h2>
@@ -195,7 +195,7 @@
 		<div class="projects-container">
 			<div class="project-card">
 				<div class="project-image">
-					<img src="Capture.JPG"></img>
+					<img src="./images/Capture.JPG" alt="Dashboard App for Solar Panel Installation - MERN Stack"/>
 				</div>
 				<div class="project-detail">
 					<h3 class="project-title">Final Project</h3>
@@ -212,7 +212,7 @@
 			</div>
 			<div class="project-card">
 				<div class="project-image">
-					<img src="oldVnew.JPG"></img>
+					<img src="./images/oldVnew.JPG" alt="First Project vs. Updated Version - HTML/CSS"/>
 				</div>
 				<div class="project-detail">
 					<h3 class="project-title">Then Vs Now</h3>
@@ -226,7 +226,7 @@
 			</div>
 			<div class="project-card">
 				<div class="project-image">
-					<img src="a&h.JPG"></img>
+					<img src="./images/a&h.JPG" alt="Cleaning Company Website - HTML, CSS, Bootstrap, JavaScript"/>
 				</div>
 				<div class="project-detail">
 					<h3 class="project-title">A&H Website</h3>
@@ -248,21 +248,20 @@
 			<h2>Contact Me</h2>
 			<a class="contact-email" href="mailto:nabutech@proton.me">nabutech@proton.me</a>
 			<div class="social-icons contact">
-				<a href="https://github.com/your-github-profile" class="github">
+				<a href="https://github.com/NabuTech" class="github">
 				  <i class="fab fa-github"></i>
 				</a>
-				<a href="https://linkedin.com/in/your-linkedin-profile" class="linkedin">
+				<a href="https://www.linkedin.com/in/sammyjohnrawlinson" class="linkedin">
 				  <i class="fab fa-linkedin"></i>
 				</a>
-				<a href="https://twitter.com/your-twitter-profile" class="twitter">
+				<a href="https://twitter.com/nabu_tech" class="twitter">
 				  <i class="fab fa-twitter"></i>
 				</a>
 			</div>
 		</div>
 		<div class="contact-image">
 			<div class="glitch-wrapper">
-				<img alt="phone" src="eckhard-hoehmann-NKKvASHfrG4-unsplash.jpg"
-				class="glitch-image">
+				<img class="glitch-image" src="./images//eckhard-hoehmann-NKKvASHfrG4-unsplash.jpg" alt="Telephone Animation" />
 			</div>
 			<label class="contact-image-label typewriter">Answer the Phone....</label>
 		</div>
@@ -273,7 +272,7 @@
 
 
 
-<script src="script.js"></script>
+<script src="./scripts/script.js"></script>
 </body>
 </html>
 
