--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
 		<div class="greeting-row">
 			<div class="greeting-left col-md-6">    
 				<div class="greeting-text">
-					<p>Our mission is to create exceptional digital experiences. Whether you're a potential employer, interested in technology insights, seeking software solutions, or embarking on your own tech journey, NabuTech is here for you. We believe in sharing our journey, learnings, and mistakes to help others succeed. NabuTech is dedicated to never stop learning, growing, and innovating.</p>
+					 <p>Back in 2021, after a successful career in hospitality management, amidst the turmoil 
+						caused by the COVID-19 pandemic, I found myself in a new country at a crossroads. 
+						Determined to embrace the opportunities presented by the technology industry, I 
+						immersed myself in the world of software development, pursuing a Software Development
+						Diploma. Today, after completing  bachelor's degree in IT: Software and Web Development I am looking to take on an internship or job opportunty
+						and continue sharing my journey and accomplishments through NabuTech.</p>
+					<p id="linkedin">
+						To learn more about the person behind NabuTech, please visit my <a href="https://www.linkedin.com/in/sammyjohnrawlinson">LinkedIn</a> profile.
+					  </p>
 					<nav class="navigation">
 						<a href="#about" onclick="scrollToAbout()">About</a>
 						<a href="#skills">Skills</a>
@@ -69,15 +77,19 @@
 		  </div>
 		<div class="about-text">
 			<h2>About</h2>
-			<p>Back in 2021, after a successful career in hospitality management, amidst the turmoil 
-			caused by the COVID-19 pandemic, I found myself in a new country at a crossroads. 
-			Determined to embrace the opportunities presented by the technology industry, I 
-			immersed myself in the world of software development, pursuing a Software Development
-			Diploma. Today, I continue to pursue my passion by working towards a bachelor's 
-			degree in IT and sharing my journey and accomplishments through NabuTech.</p>
-		  	<p id="linkedin">
-			To learn more about the person behind NabuTech, please visit my <a href="https://www.linkedin.com/in/sammyjohnrawlinson">LinkedIn</a> profile.
-		  	</p>
+			<p> With a strong problem-solving acumen, project management skills, and 
+			self-motivation, I am adept at creating innovative and efficient solutions.
+			 My passion for learning and continuous improvement drives me to evolve 
+			 constantly. I have explored various programming languages, most notably C# 
+			 and Python. In full-stack development, I excel with HTML, CSS, and 
+			 JavaScript, and I am proficient in working with frameworks like React and 
+			 Node.js. While I have experience with SQL, my expertise lies in MongoDB for
+			  databases. I am fully competent with Git and well-versed in Agile 
+			  practices, including Kanban and Scrum methodologies. Additionally, I 
+			  possess a comprehensive understanding of other software development skills 
+			  and processes such as Testing (UAT and Unit), UI/UX Design, and best 
+			  security practices.
+		  </p>
 		</div>
 	  </section>
   
