--- a/index.html
+++ b/index.html
@@ -77,19 +77,10 @@
 		  </div>
 		<div class="about-text">
 			<h2>About</h2>
-			<p> With a strong problem-solving acumen, project management skills, and 
-			self-motivation, I am adept at creating innovative and efficient solutions.
-			 My passion for learning and continuous improvement drives me to evolve 
-			 constantly. I have explored various programming languages, most notably C# 
-			 and Python. In full-stack development, I excel with HTML, CSS, and 
-			 JavaScript, and I am proficient in working with frameworks like React and 
-			 Node.js. While I have experience with SQL, my expertise lies in MongoDB for
-			  databases. I am fully competent with Git and well-versed in Agile 
-			  practices, including Kanban and Scrum methodologies. Additionally, I 
-			  possess a comprehensive understanding of other software development skills 
-			  and processes such as Testing (UAT and Unit), UI/UX Design, and best 
-			  security practices.
-		  </p>
+			<p>My mission is to create exceptional digital experiences. Whether you're a potential employer, interested in technology insights, 
+			seeking software solutions, or embarking on your own tech journey, NabuTech is here for you. I believe in 
+			sharing my journey, learnings, and mistakes to help others succeed. NabuTech is dedicated to never 
+			stop learning, growing, and innovating.</p>  
 		</div>
 	  </section>
   
